# RAG

./: .env.example  pyproject.toml  rag_chromadb.ipynb  rag_qdrant.ipynb
database/: chroma.sqlite3
docs/: Acordo de Confidencialidade.md  Empreitada de Serviços.md  Locação Maquinário.md  Terraplanagem.md
