[project]
name = "ifsc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.15",
    "ipykernel>=6.30.0",
    "llama-index>=0.12.52",
    "llama-index-vector-stores-chroma>=0.4.2",
    "python-dotenv>=1.1.1",
    "qdrant-client>=1.15.0",
    "tiktoken>=0.9.0",
]
